Added "Logger" filter to log backend

--- a/src/Presentation/SmartStore.Web/Config/log4net.config
+++ b/src/Presentation/SmartStore.Web/Config/log4net.config
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<log4net debug="false">
+<log4net debug="true">
 
   <!-- If you are looking here and want more output, first thing to do is change root/priority/@value to "INFO" or "ALL". -->
 
   <root>
     <!-- Value of priority may be ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF. -->
     <priority value="DEBUG" />
-    <appender-ref ref="db" />
-    <appender-ref ref="debug-file" />
-    <!--<appender-ref ref="error-file" />-->
+    <appender-ref ref="database" />
   </root>
 
   <logger name="Install" additivity="false">
@@ -56,7 +54,7 @@
     </layout>
   </appender>
   
-  <appender name="db" type="log4net.Appender.ADONetAppender">
+  <appender name="database" type="log4net.Appender.ADONetAppender" x-type="SmartStore.Core.Logging.DpAppender, SmartStore.Core">
     <bufferSize value="50" />
     <filter type="log4net.Filter.LevelRangeFilter">
       <acceptOnMatch value="true" />
