--- a/src/Plugins/SmartStore.MegaMenu/SmartStore.MegaMenu.csproj
+++ b/src/Plugins/SmartStore.MegaMenu/SmartStore.MegaMenu.csproj
@@ -70,16 +70,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'EFMigrations|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\EFMigrations\</OutputPath>
+    <OutputPath>..\..\Presentation\SmartStore.Web\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <TransformWebConfigEnabled>False</TransformWebConfigEnabled>
-    <AutoParameterizationWebConfigConnectionStrings>
-      False
-    </AutoParameterizationWebConfigConnectionStrings>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'PluginDev|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -180,7 +177,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\MegaMenuObjectContext.cs" />
-    <Compile Include="Data\MegaMenuRecordMap.cs" />
+    <Compile Include="Data\Migrations\201609221558115_Initial.cs" />
+    <Compile Include="Data\Migrations\201609221558115_Initial.Designer.cs">
+      <DependentUpon>201609221558115_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data\Migrations\Configuration.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Domain\MegaMenuRecord.cs" />
@@ -190,7 +190,7 @@
     <Compile Include="RouteProvider.cs" />
     <Compile Include="Controllers\MegaMenuController.cs" />
     <Compile Include="Models\ConfigurationModel.cs" />
-    <Compile Include="Models\PublicInfoModel.cs" />
+    <Compile Include="Models\MegaMenuNavigationModel.cs" />
     <Compile Include="Services\MegaMenuService.cs" />
     <Compile Include="Services\IMegaMenuService.cs" />
     <Compile Include="Settings\MegaMenuSettings.cs" />
@@ -251,6 +251,11 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Data\Migrations\201609221558115_Initial.resx">
+      <DependentUpon>201609221558115_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
