Search: Further implementation

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -490,7 +490,9 @@
     <Compile Include="Search\CatalogSearchQuery.cs" />
     <Compile Include="Search\CatalogSearchResult.cs" />
     <Compile Include="Search\CatalogSearchService.cs" />
+    <Compile Include="Search\ILinqCatalogSearchService.cs" />
     <Compile Include="Search\ICatalogSearchService.cs" />
+    <Compile Include="Search\LinqCatalogSearchService.cs" />
     <Compile Include="Security\AclService.cs" />
     <Compile Include="Security\EncryptionService.cs" />
     <Compile Include="Security\IAclService.cs" />
