--- a/src/Presentation/SmartStore.Web/Config/ConnectionStrings.config
+++ b/src/Presentation/SmartStore.Web/Config/ConnectionStrings.config
@@ -7,6 +7,7 @@
     Uncomment the block below to specify connection strings for various
     Redis based components. Keep in mind that "SmartStore.Redis" always acts as a fallback.
   -->
+  <add name="SmartStore.Redis" connectionString="localhost" />
   <!--
   <add name="SmartStore.Redis" connectionString="localhost" />
   <add name="SmartStore.Redis.MessageBus" connectionString="localhost" />
