--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -129,7 +129,7 @@
     <Compile Include="Caching2\ColumnMetadata.cs" />
     <Compile Include="Caching2\CommandTreeFacts.cs" />
     <Compile Include="Caching2\DbCache.cs" />
-    <Compile Include="Caching2\CachedDbResult.cs" />
+    <Compile Include="Caching2\DbCacheEntry.cs" />
     <Compile Include="Caching2\DbCachingPolicy.cs" />
     <Compile Include="Caching2\IDbCache.cs" />
     <Compile Include="Caching2\QueryableExtensions.cs" />
