--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -410,6 +410,7 @@
     <Compile Include="Search\IndexProviderBase.cs" />
     <Compile Include="Search\ISearchBits.cs" />
     <Compile Include="Search\ISearchEngine.cs" />
+    <Compile Include="Search\ISearchFilter.cs" />
     <Compile Include="Search\ISearchHit.cs" />
     <Compile Include="Search\ISearchQuery.cs" />
     <Compile Include="Search\NullIndexStore.cs" />
