Search: Filter types now implement interfaces

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -401,6 +401,9 @@
     <Compile Include="Caching\NullCache.cs" />
     <Compile Include="Plugins\LoadPluginResult.cs" />
     <Compile Include="Search\DefaultIndexManager.cs" />
+    <Compile Include="Search\Filter\CombinedSearchFilter.cs" />
+    <Compile Include="Search\Filter\RangeSearchFilter.cs" />
+    <Compile Include="Search\Filter\SearchFilterBase.cs" />
     <Compile Include="Search\IIndexDocument.cs" />
     <Compile Include="Search\IIndexManager.cs" />
     <Compile Include="Search\IIndexProvider.cs" />
@@ -410,11 +413,11 @@
     <Compile Include="Search\IndexProviderBase.cs" />
     <Compile Include="Search\ISearchBits.cs" />
     <Compile Include="Search\ISearchEngine.cs" />
-    <Compile Include="Search\ISearchFilter.cs" />
+    <Compile Include="Search\Filter\ISearchFilter.cs" />
     <Compile Include="Search\ISearchHit.cs" />
     <Compile Include="Search\ISearchQuery.cs" />
     <Compile Include="Search\NullIndexStore.cs" />
-    <Compile Include="Search\SearchFilter.cs" />
+    <Compile Include="Search\Filter\SearchFilter.cs" />
     <Compile Include="Search\SearchQuery.cs" />
     <Compile Include="Search\SearchSort.cs" />
     <Compile Include="Security\SmartStorePrincipal.cs" />
