--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -503,12 +503,11 @@
     <Compile Include="Customers\CustomerRegistrationResult.cs" />
     <Compile Include="Directory\StateProvinceService.cs" />
     <Compile Include="Security\StandardPermissionProvider.cs" />
-    <Compile Include="Seo\BaseSitemapGenerator.cs" />
     <Compile Include="Seo\IUrlRecordService.cs" />
     <Compile Include="Seo\SeoExtensions.cs" />
-    <Compile Include="Seo\ISitemapGenerator.cs" />
-    <Compile Include="Seo\SitemapGenerator.cs" />
-    <Compile Include="Seo\UpdateFrequency.cs" />
+    <Compile Include="Seo\IXmlSitemapGenerator.cs" />
+    <Compile Include="Seo\XmlSitemapGenerator.cs" />
+    <Compile Include="Seo\XmlSitemapNode.cs" />
     <Compile Include="Seo\UrlRecordService.cs" />
     <Compile Include="ServiceCacheConsumer.cs" />
     <Compile Include="Shipping\IShipmentService.cs" />
