--- a/src/Plugins/SmartStore.DevTools/Web.config
+++ b/src/Plugins/SmartStore.DevTools/Web.config
@@ -124,6 +124,10 @@
         <assemblyIdentity name="MiniProfiler" publicKeyToken="b44f9351044011a3" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.1.140" newVersion="3.1.1.140" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="LibSassHost" publicKeyToken="3e24e88796a38e46" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.5.2.0" newVersion="0.5.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
