--- a/src/Plugins/SmartStore.FacebookAuth/web.config
+++ b/src/Plugins/SmartStore.FacebookAuth/web.config
@@ -120,6 +120,10 @@
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="LibSassHost" publicKeyToken="3e24e88796a38e46" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.5.2.0" newVersion="0.5.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
