--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -3,11 +3,6 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="jsEngineSwitcher"> 
-		    <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
-		    <section name="v8" type="JavaScriptEngineSwitcher.V8.Configuration.V8Configuration, JavaScriptEngineSwitcher.V8" />
-        <section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" />
-    </sectionGroup>
     <sectionGroup name="bundleTransformer"> 
 			<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
 		  <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
@@ -16,70 +11,6 @@
       <section name="autoprefixer" type="BundleTransformer.Autoprefixer.Configuration.AutoprefixerSettings, BundleTransformer.Autoprefixer" />
     </sectionGroup>
   </configSections>
-  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
-    <core>
-      <css defaultPostProcessors="UrlRewritingCssPostProcessor, AutoprefixCssPostProcessor" defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" combineFilesBeforeMinification="false">
-        <translators>
-				  <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				  <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" enabled="true" />
-          <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
-        </translators>
-        <postProcessors>
-				  <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-			    <add name="AutoprefixCssPostProcessor" type="BundleTransformer.Autoprefixer.PostProcessors.AutoprefixCssPostProcessor, BundleTransformer.Autoprefixer" useInDebugMode="true" />
-        </postProcessors>
-        <minifiers>
-					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-				  <add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
-        </minifiers>
-        <fileExtensions>
-					<add fileExtension=".css" assetTypeCode="Css" />
-				  <add fileExtension=".less" assetTypeCode="Less" />
-          <add fileExtension=".sass" assetTypeCode="Sass" />
-          <add fileExtension=".scss" assetTypeCode="Scss" />
-        </fileExtensions>
-      </css>
-      <js defaultMinifier="MicrosoftAjaxJsMinifier" usePreMinifiedFiles="true">
-        <translators>
-					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				</translators>
-        <minifiers>
-					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
-				  <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
-        </minifiers>
-        <fileExtensions>
-					<add fileExtension=".js" assetTypeCode="JavaScript" />
-				</fileExtensions>
-      </js>
-      <assetHandler disableServerCache="false" serverCacheDurationInMinutes="1440" disableClientCache="false" />
-    </core>
-    <microsoftAjax>
-      <css allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" colorNames="Strict" commentMode="Important" minifyExpressions="true" severity="0" />
-      <js allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" alwaysEscapeNonAscii="false" collapseToLiteral="true" constStatementsMozilla="false" debugLookupList="Debug,$Debug,WAssert,Msn.Debug,Web.Debug" errorIfNotInlineSafe="false" evalLiteralExpressions="true" evalTreatment="Ignore" ignoreConditionalCompilation="false" ignorePreprocessorDefines="false" inlineSafeStrings="true" knownGlobalNamesList="" localRenaming="CrunchAll" macSafariQuirks="true" manualRenamesProperties="true" noAutoRenameList="$super" preserveFunctionNames="false" preserveImportantComments="true" quoteObjectLiteralProperties="false" removeFunctionExpressionNames="true" removeUnneededCode="true" renamePairs="" reorderScopeDeclarations="true" strictMode="false" stripDebugStatements="true" severity="0" />
-    </microsoftAjax>
-    <autoprefixer cascade="false" add="true" remove="true" supports="true" flexbox="true" grid="true">
-      <browsers>
-        <add conditionalExpression="&gt; 1%" />
-        <add conditionalExpression="last 2 versions" />
-        <add conditionalExpression="Firefox ESR" />
-        <add conditionalExpression="not ie &lt;= 9" />
-      </browsers>
-      <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
-      <jsEngine name="V8JsEngine" />
-    </autoprefixer>
-    <less useNativeMinification="false" ieCompat="false" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
-      <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
-      <jsEngine name="V8JsEngine" />
-    </less>
-  </bundleTransformer>
-  <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
-    <core>
-      <engines>
-        <add name="V8JsEngine" type="JavaScriptEngineSwitcher.V8.V8JsEngine, JavaScriptEngineSwitcher.V8" />
-        <add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" />
-      </engines>
-    </core>
-  </jsEngineSwitcher>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -236,12 +167,12 @@
     <urlCompression doStaticCompression="false" doDynamicCompression="true" />
     <security>
       <requestFiltering>
-        <hiddenSegments>
+        <!--<hiddenSegments>
           <remove segment="ClearScript.V8" />
           <remove segment="LibSassHost.Native" />
           <add segment="ClearScript.V8" />
           <add segment="LibSassHost.Native" />
-        </hiddenSegments>
+        </hiddenSegments>-->
       </requestFiltering>
     </security>
   </system.webServer>
@@ -317,7 +248,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -379,7 +310,12 @@
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="LibSassHost" publicKeyToken="3e24e88796a38e46" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.5.2.0" newVersion="0.5.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
+    
   </runtime>
   <connectionStrings configSource="Config\ConnectionStrings.config" />
   <system.data>
@@ -395,4 +331,62 @@
       <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
     </providers>
   </entityFramework>
+
+  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
+    <core>
+      <css defaultPostProcessors="UrlRewritingCssPostProcessor, AutoprefixCssPostProcessor" defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" combineFilesBeforeMinification="false">
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" enabled="true" />
+          <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
+        </translators>
+        <postProcessors>
+          <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="true" />
+          <add name="AutoprefixCssPostProcessor" type="BundleTransformer.Autoprefixer.PostProcessors.AutoprefixCssPostProcessor, BundleTransformer.Autoprefixer" useInDebugMode="true" />
+        </postProcessors>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
+        <fileExtensions>
+          <add fileExtension=".css" assetTypeCode="Css" />
+          <add fileExtension=".less" assetTypeCode="Less" />
+          <add fileExtension=".sass" assetTypeCode="Sass" />
+          <add fileExtension=".scss" assetTypeCode="Scss" />
+        </fileExtensions>
+      </css>
+      <js defaultMinifier="MicrosoftAjaxJsMinifier" usePreMinifiedFiles="true">
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+        </translators>
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
+        <fileExtensions>
+          <add fileExtension=".js" assetTypeCode="JavaScript" />
+        </fileExtensions>
+      </js>
+      <assetHandler disableServerCache="false" serverCacheDurationInMinutes="1440" disableClientCache="false" />
+    </core>
+    <less useNativeMinification="false" ieCompat="false" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
+      <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
+      <jsEngine name="V8JsEngine" />
+    </less>
+    <sassAndScss useNativeMinification="false" indentType="Space" indentWidth="2" lineFeedType="CrLf" precision="5" sourceComments="false" />
+    <autoprefixer cascade="false" add="true" remove="true" supports="true" flexbox="true" grid="true">
+      <browsers>
+        <add conditionalExpression="&gt; 1%" />
+        <add conditionalExpression="last 2 versions" />
+        <add conditionalExpression="Firefox ESR" />
+        <add conditionalExpression="not ie &lt;= 9" />
+      </browsers>
+      <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
+      <jsEngine name="V8JsEngine" />
+    </autoprefixer>
+    <microsoftAjax>
+      <css allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" colorNames="Strict" commentMode="Important" minifyExpressions="true" severity="0" />
+      <js allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" alwaysEscapeNonAscii="false" collapseToLiteral="true" constStatementsMozilla="false" debugLookupList="Debug,$Debug,WAssert,Msn.Debug,Web.Debug" errorIfNotInlineSafe="false" evalLiteralExpressions="true" evalTreatment="Ignore" ignoreConditionalCompilation="false" ignorePreprocessorDefines="false" inlineSafeStrings="true" knownGlobalNamesList="" localRenaming="CrunchAll" macSafariQuirks="true" manualRenamesProperties="true" noAutoRenameList="$super" preserveFunctionNames="false" preserveImportantComments="true" quoteObjectLiteralProperties="false" removeFunctionExpressionNames="true" removeUnneededCode="true" renamePairs="" reorderScopeDeclarations="true" strictMode="false" stripDebugStatements="true" severity="0" />
+    </microsoftAjax>
+  </bundleTransformer>
 </configuration>
