--- a/src/Plugins/SmartStore.AmazonPay/web.config
+++ b/src/Plugins/SmartStore.AmazonPay/web.config
@@ -77,7 +77,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.4.0" newVersion="1.2.4.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -126,6 +126,10 @@
       <dependentAssembly>
         <assemblyIdentity name="MsieJavaScriptEngine" publicKeyToken="a3a2846a37ac0d3e" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.6.0" newVersion="1.5.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="LibSassHost" publicKeyToken="3e24e88796a38e46" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.5.2.0" newVersion="0.5.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
