--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -155,13 +155,14 @@
     <Compile Include="Async\AsyncState.cs" />
     <Compile Include="Caching\ISet.cs" />
     <Compile Include="Caching\MemoryCacheManager.cs" />
-    <Compile Include="Caching\DisplayControl.cs" />
+    <Compile Include="Caching\OutputCache\DisplayControl.cs" />
     <Compile Include="Caching\IRequestCache.cs" />
-    <Compile Include="Caching\IDisplayControl.cs" />
-    <Compile Include="Caching\IOutputCacheProvider.cs" />
+    <Compile Include="Caching\OutputCache\IDisplayControl.cs" />
+    <Compile Include="Caching\OutputCache\IOutputCacheInvalidationObserver.cs" />
+    <Compile Include="Caching\OutputCache\IOutputCacheProvider.cs" />
     <Compile Include="Caching\MemorySet.cs" />
-    <Compile Include="Caching\NullOutputCacheProvider.cs" />
-    <Compile Include="Caching\OutputCacheItem.cs" />
+    <Compile Include="Caching\OutputCache\NullOutputCacheProvider.cs" />
+    <Compile Include="Caching\OutputCache\OutputCacheItem.cs" />
     <Compile Include="Caching\RequestCache.cs" />
     <Compile Include="Collections\ConcurrentMultimap.cs" />
     <Compile Include="Collections\LazyMultimap.cs" />
